Prevent InfoIcon tooltip from going off-screen

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -5,15 +5,15 @@
 
 	.info-icon-text {
 		//no idea why this is not inherited
-		font-family: "Noto Sans", sans-serif;
-		padding: 5px;
-		border: 1px solid $blue;
 		background: rgba(251, 247, 246, 0.95);
+		border-radius: 2px;
+		border: 1px solid $blue;
+		font-family: "Noto Sans", sans-serif;
+		margin: 15px 0 0 -250px;
+		min-width: 250px;
+		padding: 5px;
 		position: absolute;
 		z-index: 1000;
-		border-radius: 2px;
-		margin-top: 15px;
-		min-width: 250px;
 
 		>h4 {
 			margin-top: 0px;
